Added t7 logo, fixed lint issues, improved usability

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,15 @@
 		<link rel="icon" href="%PUBLIC_URL%/justinnasicon192.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="justinnas's portfolio" />
+		<meta
+			name="description"
+			content="Welcome to my portfolio site. My name is Justinas. I'm a student, web developer, software developer, graphic designer, and more."
+		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/justinnasicon192.png" />
-		<!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-		<title>justinnas</title>
+		<title>Justinas - t7.lt</title>
 	</head>
 	<body>
-		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<noscript></noscript>
 		<div id="root"></div>
 	</body>
 </html>
