Improved website's design and performance

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
 		<link rel="icon" href="%PUBLIC_URL%/justinnasicon192.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 		<meta name="theme-color" content="#000000" />
-		<meta
-			name="description"
-			content="Welcome to my portfolio site. My name is Justinas. I'm a student, web developer, software developer, graphic designer, and more."
-		/>
+		<meta name="description" content="Portfolio of Justinas. Student. Developer. Designer." />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/justinnasicon192.png" />
 		<title>Justinas - t7.lt</title>
 	</head>
