--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/justinnasicon192.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Portfolio of Justinas. Student. Developer. Designer." />
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/justinnasicon192.png" />
-		<title>Justinas - t7.lt</title>
+		<meta name="description" content="7L" />
+		<title>t7Lt</title>
 	</head>
 	<body>
 		<noscript></noscript>
